<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width= "match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4F1E9"
        tools:context=".MeFragment">

        <EditText
            android:id="@+id/experience3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="Experience for talent 3: "
            android:textColor="#B1D182"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/talent3"
            app:layout_constraintTop_toBottomOf="@+id/talent3" />

        <EditText
            android:id="@+id/experience4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="Experience for talent 4:"
            android:textColor="#B1D182"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/talent4"
            app:layout_constraintTop_toBottomOf="@+id/talent4" />

        <EditText
            android:id="@+id/talent4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Talent4: "
            android:textColor="#688F4E"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/experience"
            app:layout_constraintTop_toBottomOf="@+id/experience" />

        <EditText
            android:id="@+id/talent3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Talent3: "
            android:textColor="#688F4E"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/experience1"
            app:layout_constraintTop_toBottomOf="@+id/experience1" />

        <EditText
            android:id="@+id/talent2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="Talent2: "
            android:textColor="#688F4E"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/talent1"
            app:layout_constraintTop_toTopOf="@+id/talent1" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profilePic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/new_user"
            android:inputType="text"
            android:text="@string/new_user"
            android:textColor="#688F4E"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profilePic" />

        <TextView
            android:id="@+id/talents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/my_talents"
            android:textColor="#2B463C"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username" />

        <EditText
            android:id="@+id/talent1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Talent1: "
            android:textColor="#688F4E"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/talents"
            app:layout_constraintTop_toBottomOf="@id/talents" />

        <EditText
            android:id="@+id/experience1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="Experience for talent 1: "
            android:textColor="#B1D182"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/talent1"
            app:layout_constraintTop_toBottomOf="@+id/talent1" />

        <EditText
            android:id="@+id/experience"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="Experience for talent 2:"
            android:textColor="#B1D182"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/talent2"
            app:layout_constraintTop_toBottomOf="@+id/talent2" />

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/i_need_help_with"
            android:textColor="#2B463C"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/experience3"
            app:layout_constraintTop_toBottomOf="@+id/experience3" />

        <EditText
            android:id="@+id/help1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="subject 1:"
            android:textColor="#B1D182"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/help"
            app:layout_constraintTop_toBottomOf="@id/help" />

        <EditText
            android:id="@+id/help2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="subject 2:"
            android:textColor="#B1D182"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/help1"
            app:layout_constraintTop_toTopOf="@+id/help1" />

        <EditText
            android:id="@+id/help3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="subject 3:"
            android:textColor="#B1D182"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/help2"
            app:layout_constraintTop_toTopOf="@+id/help2" />

        <TextView
            android:id="@+id/available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/i_m_available"
            android:textSize="20sp"
            android:textColor="#2B463C"
            app:layout_constraintLeft_toLeftOf="@id/talents"
            app:layout_constraintTop_toBottomOf="@id/help1" />

        <EditText
            android:id="@+id/availableInput"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:textColor="#688F4E"
            app:layout_constraintStart_toStartOf="@+id/available"
            app:layout_constraintTop_toBottomOf="@id/available" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/my_contact_info"
            android:textSize="20sp"
            android:textColor="#2B463C"
            app:layout_constraintLeft_toLeftOf="@id/talents"
            app:layout_constraintTop_toBottomOf="@id/availableInput" />

        <EditText
            android:id="@+id/contactInput"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:textColor="#688F4E"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/contact"
            app:layout_constraintTop_toBottomOf="@id/contact" />

    </androidx.constraintlayout.widget.ConstraintLayout>





</ScrollView>